[package]
name = "scrolling-game"
version = "0.1.0"
authors = ["hi563145 <gitlab.miltonian@aleeas.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "scrolling-game"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
embedded-hal = "0.2.3"
hd44780-driver = "0.4.0"
heapless = "0.7.16"
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }

# Embeded specific crates
stm32f4xx-hal = { version =  "0.17.0", features = ["stm32f411"] }
cortex-m = {version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.3"
defmt-rtt = "0.4.0"
defmt = "0.3.5"

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
